# Othello

./: CODE_OF_CONDUCT.md  README.md
OS_Build/: BUILDING.md  OVMF_VARS.fd  build-and-run.ps1  build-and-run.sh
OS_Build/Rust-ASM/: Cargo.toml
OS_Build/Rust-ASM/src/: bare_metal.json  disk.rs  dp-driver.rs  hdmi-driver.rs  kernelentry.rs  mbr.rs  network-driver.rs  rust-display.rs  rust-kernel.rs  rust-network.rs  rust-pci.rs  rust-ports.rs  switchto32bit.rs  utility.rs  vga-driver.rs  window.rs
OS_Build/Rust-Kernel/: Cargo.toml  bare_metal.json  build.rs  linker.ld
OS_Build/Rust-Kernel/.cargo/: config.toml
OS_Build/Rust-Kernel/src/: ata.rs  bootinfo.rs  browser.rs  crc32.rs  display.rs  dp_driver.rs  editor.rs  font.rs  font8x8_basic.incl  framebuffer_driver.rs  fs.rs  fs_cmds.rs  gui.rs  hdmi_driver.rs  heap.rs  idt.rs  keyboard.rs  linker.ld  login.rs  mod.rs  mouse.rs  net.rs  network_drivers.rs  persist.rs  portio.rs  regedit.rs  registry.rs  rust-kernel.rs  rust_pci.rs  rust_ports.rs  security.rs  serial.rs  shell.rs  time.rs  utility.rs  vga_driver.rs  wallpaper.rs  window.rs
OS_Build/Rust-Kernel/src/net/: dns.rs  http.rs  tcp.rs  tls.rs
OS_Build/Rust-Kernel/src/web/: css.rs  dom.rs  html.rs  js.rs  layout.rs  mod.rs
OS_Build/Rust-Kernel/src/window/: shell.rs
OS_Build/Rust-Kernel/tools/: fetch_proxy.py  https_proxy.py
OS_Build/Rust-Kernel/wallpapers/: Othello.rgba  fox.rgba  othello_grid.rgba  othello_wave.rgba
OS_Build/UEFI-Loader/: Cargo.toml  README.md
OS_Build/UEFI-Loader/src/: main.rs
OS_Build/assembly/: README.md  disk.asm  gdt.asm  kernel_sectors.inc  kernelentry.asm  mbr.asm  mbr_gdt_detection.asm  mbr_or_gpt.asm  mbr_stage1.asm  print64.asm  stage2.asm  switchto32bit.asm  switchto64bit.asm
OS_Build/drivers/: display.c
OS_Build/drivers/Rust-Drivers/: Cargo.toml
OS_Build/drivers/Rust-Drivers/src/: rust-display.rs  rust-ports.rs
OS_Build/efi_root/: kernel.elf  startup.nsh
OS_Build/kernel/: kernel.c
OS_Build/kernel/Rust-Kernel/: Cargo.toml  i686-none.json
OS_Build/kernel/Rust-Kernel/src/: main.rs  rust-kernel.rs  utility.rs
OS_Build/project/src/: disk.rs  gdt.rs  mbr.rs  print16bit.rs  print32.rs  switchto32bit.rs
