[package]
name = "Rust-ASM"
version = "0.1.0"
edition = "2021"

[dependencies]
no-std = "0.0.1"
panic-halt = "1.0.0"

[[bin]]
name = "rust-kernel"
path = "src/rust-kernel.rs"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build]
target = "bare_metal.json"

[target.'cfg(target_os = "none")']
rustflags = ["-C", "linker=ld"]