[package]
name = "Rust-Kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.5"
spin = "0.10"
mutex = "1.0.2"
panic-halt = "1.0.0"

x86_64 = { version = "0.15.2", default-features = false, features = ["instructions"] }

[[bin]]
name = "rust-kernel"
path = "src/rust-kernel.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# Build settings for bare-metal
