[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
no-std = "0.0.1"
panic-halt = "1.0.0"
asm = "0.3.0"

[[bin]]
name = "rust-display"
path = "src/rust-display.rs"

[[bin]]
name = "rust-ports"
path = "src/rust-ports.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
